@@ -1,1 +1,0 @@
-<TestLog><TestSuite name="Master Test Suite"><TestCase name="la" file="test.cc" line="7"><Info file="test.cc" line="8"><![CDATA[check 1 == 1 has passed]]></Info><TestingTime>53</TestingTime></TestCase><TestSuite name="CString" file="arctic_strstr.cc" line="8"><TestCase name="strtok" file="arctic_strstr.cc" line="10"><Info file="arctic_strstr.cc" line="17"><![CDATA[check test_str1.strtok(true, ",") == "this" has passed]]></Info><Info file="arctic_strstr.cc" line="19"><![CDATA[check test_str1.strtok(false, ",") == "is" has passed]]></Info><Info file="arctic_strstr.cc" line="20"><![CDATA[check test_str1.strtok(false, "a") == ",comm" has passed]]></Info><Info file="arctic_strstr.cc" line="22"><![CDATA[check test_str1.strtok(true, ",") == "this" has passed]]></Info><Info file="arctic_strstr.cc" line="24"><![CDATA[check test_str2.strtok(true, ",") == "more" has passed]]></Info><Info file="arctic_strstr.cc" line="26"><![CDATA[check test_str3.strtok(false, "e") == "no d" has passed]]></Info><Info file="arctic_strstr.cc" line="29"><![CDATA[check test_str3.strtok(true, "lymyt") == "no de" has passed]]></Info><Info file="arctic_strstr.cc" line="30"><![CDATA[check test_str3.strtok(true, "") == "no delimiters?" has passed]]></Info><Info file="arctic_strstr.cc" line="31"><![CDATA[check test_str4.strtok(true, "any") == "" has passed]]></Info><TestingTime>76</TestingTime></TestCase><TestCase name="strstr_clean_start_test1" file="arctic_strstr.cc" line="35"><Info file="arctic_strstr.cc" line="41"><![CDATA[check test_str1.clean_start(' ') == "space     " has passed]]></Info><Info file="arctic_strstr.cc" line="42"><![CDATA[check test_str2.clean_start('c') == "Correct" has passed]]></Info><Info file="arctic_strstr.cc" line="43"><![CDATA[check test_str3.clean_start(' ') == "closed spaces" has passed]]></Info><TestingTime>34</TestingTime></TestCase><TestCase name="strstr_clean_char_test1" file="arctic_strstr.cc" line="47"><Info file="arctic_strstr.cc" line="54"><![CDATA[check test_str1.clean_char('e') == "lckr Erdbrmarmlad" has passed]]></Info><Info file="arctic_strstr.cc" line="55"><![CDATA[check test_str2.clean_char('X') == "" has passed]]></Info><Info file="arctic_strstr.cc" line="56"><![CDATA[check test_str3.clean_char('o') == "" has passed]]></Info><Info file="arctic_strstr.cc" line="57"><![CDATA[check test_str4.clean_char('Z') == "Euclid Go!" has passed]]></Info><TestingTime>40</TestingTime></TestCase><TestCase name="strstr_clean_white_test1" file="arctic_strstr.cc" line="61"><Info file="arctic_strstr.cc" line="66"><![CDATA[check test_str1.clean_white() == "^v^o_o" has passed]]></Info><Info file="arctic_strstr.cc" line="67"><![CDATA[check test_str2.clean_white() == "" has passed]]></Info><TestingTime>26</TestingTime></TestCase><TestCase name="strstr_toupper_test1" file="arctic_strstr.cc" line="71"><Info file="arctic_strstr.cc" line="77"><![CDATA[check test_str1.toupper() == " 12345$%*-_;:,.?" has passed]]></Info><Info file="arctic_strstr.cc" line="78"><![CDATA[check test_str2.toupper() == "ABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZ" has passed]]></Info><Info file="arctic_strstr.cc" line="79"><![CDATA[check test_str3.toupper() == "" has passed]]></Info><TestingTime>30</TestingTime></TestCase></TestSuite></TestSuite></TestLog>
